# feature-store-mini

./: README.md  pyproject.toml
app/: streamlit_app.py
docs/: index.html
src/: catalog.py
tests/: test_catalog.py
